--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'java'
 }
 
-group = 'com.taltech.testing'
+group = 'ee.taltech.testing'
 version = '1.0'
 sourceCompatibility = '11'
 
@@ -26,6 +26,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testCompile("org.assertj:assertj-core:3.11.1")
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
 }
 
 test {
