CI was failing because it was a maven image. Changed to gradle

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,12 +2,12 @@ stages:
   - build
   - test
 build:
-  image: maven:3.6.3-jdk-8
+  image: gradle:alpine
   stage: build
   script:
-    - chmod +x ./gradlew assemble
+    - ./gradlew assemble
 tests:
-  image: maven:3.6.3-jdk-8
+  image: gradle:alpine
   stage: test
   script:
-    - chmod +x ./gradlew test
+    - ./gradlew test
